<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome!"
            android:textSize="38sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            android:layout_marginTop="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Let's Play Quiz!"
            android:textSize="45sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            android:layout_marginTop="7dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <RelativeLayout
                android:onClick="category_one"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="4dp"
                android:background="@drawable/categoryone_greanet"
                android:layout_margin="8dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/science"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:onClick="category_two"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="4dp"
                android:background="@drawable/category_two_greanet"
                android:layout_margin="8dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/math"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <RelativeLayout
                android:onClick="category_three"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="4dp"
                android:background="@drawable/category_three_greanet"
                android:layout_margin="8dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logic"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:onClick="category_four"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="4dp"
                android:background="@drawable/category_four_greanet"
                android:layout_margin="8dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/English"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
<!--    <Button-->
<!--        android:onClick="one"-->
<!--        android:id="@+id/q1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="question1"-->
<!--        />-->
<!--    <Button-->
<!--        android:id="@+id/two2"-->
<!--        android:onClick="two"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="question2"-->
<!--        android:layout_below="@id/q1"-->
<!--        />-->
</RelativeLayout>